--- a/platform_code/assessment/templates/assessment/edit-evaluation.html
+++ b/platform_code/assessment/templates/assessment/edit-evaluation.html
@@ -26,7 +26,7 @@
             <input class="btn btn-primary same-size-220 margin-auto" data-dismiss="modal" type="button"
                    value="{% trans 'Cancel' %}"/>
             <button class="btn btn-modify same-size-220 margin-auto"
-                    onclick="changeNameEvaluation('changeNameEval{{evaluation.id}}', '{{evaluation.id}}')" type="button"
+                    onclick="changeNameEvaluation('changeNameEval{{evaluation.id}}', '{{evaluation.id}}')" type="submit"
             >{% trans "Change" %}
             </button>
 
