--- a/platform_code/assessment/templates/assessment/organisation/member/edit-role-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/edit-role-member.html
@@ -7,12 +7,13 @@
           class="form" id="editRoleMember{{member.id}}" method='post'
           role="form">
         <div class="modal-header">
-            <h4 class="modal-title absolute-position">{% trans "Edit the rights of" %} {{member.user.email}}</h4>
+            <h4 class="modal-title larger-small-screen-absolute-position">
+                {% trans "Edit the rights of" %} {{member.user.email}}</h4>
             <button class="close" data-dismiss="modal" type="button">&times;</button>
         </div>
         <div class="modal-body">
             <p>{% trans "You can edit the rights of the members, except those who are 'admin':" %}</p>
-            <ul>
+            <ul class="inline-padding">
                 <li class="li-with-disc">
                     {% blocktrans %}
                     <strong>Read-only user</strong>: the read-only user can only consult
@@ -49,11 +50,11 @@
             </div>
         </div>
         <div class="modal-footer self-center">
-            <button class="btn btn-primary same-size-250 margin-auto margin-10"
-                    onclick="editRoleMember('editRoleMember{{member.id}}', '{{member.id}}', false)" type="button">
+            <button class="btn btn-primary adapted-button-size-250 margin-auto margin-10"
+                    onclick="editRoleMember('editRoleMember{{member.id}}', '{{member.id}}', false)" type="submit">
                 {% trans "Change" %}
             </button>
-            <button class="btn btn-danger same-size-250 margin-auto right-button" data-dismiss="modal"
+            <button class="btn btn-danger adapted-button-size-250 margin-auto right-button" data-dismiss="modal"
                     type="button">{% trans 'Cancel' %}
             </button>
 
