--- a/platform_code/assessment/templates/assessment/section-feedback.html
+++ b/platform_code/assessment/templates/assessment/section-feedback.html
@@ -31,7 +31,7 @@
                     <button class="btn btn-primary same-size-250 margin-auto"
                             name="button_feedback"
                             onclick="feedback({{section.id}}, 'section')"
-                            type="button">{% trans 'Submit' %}
+                            type="submit">{% trans 'Submit' %}
                     </button>
                 </div>
                 <div id="confirmation_feedback_section{{section.id}}"></div>
