--- a/platform_code/home/templates/home/about.html
+++ b/platform_code/home/templates/home/about.html
@@ -7,9 +7,9 @@
 
 <!--TODO not used for now, if it won't be later, to delete-->
 
-<h1>A propos de Substra Foundation</h1>
+<h1 class="h1-margin-no-breadcrumbs">A propos de Substra Foundation</h1>
 
-<div class="container" style="width: 80%; margin-left: auto; margin-right: auto;">
+<div class="container container-about-page">
     <p>Substra Foundation est une organisation à but non lucratif indépendante, dédiée à l’exploration d’approches de la
         data science sûres, responsables et protectrices des données sensibles, et au <strong>développement
             d’écosystèmes de data science de confiance</strong>. Elle travaille en particulier sur les collaborations
@@ -62,7 +62,7 @@
     <p>Nous sommes une équipe de passionnés, engagés, qui souhaite rassembler une communauté de contributeurs et de
         parties prenantes intéressées, et participer à l’effort collectif de recherche et d’innovation dans le domaine
         de la data science de confiance. Nous nous concentrons sur les lignes d’action suivante :</p>
-    <div class="row" style="columns: 3">
+    <div class="row three-columns">
         <div class="column">
             <img alt="image"
                  class="centered-image middle-width" src="{% static 'image/Pictos_Substra_Jaune_RVB_Data science collaborative.png' %}">
