--- a/platform_code/home/templates/home/faq.html
+++ b/platform_code/home/templates/home/faq.html
@@ -7,7 +7,7 @@
 
 
 <div class="container">
-    <h1>{% trans "FAQ" %}</h1>
+    <h1 class="h1-margin-no-breadcrumbs">{% trans "FAQ" %}</h1>
     <img alt="image" class="img-fluid d-block mx-auto image-faq" src="{% static 'image/Illustration_10.png' %}">
     <h3 class="about-subtitle">{% trans "The assessment" %}</h3>
     <p><strong>{% trans "How was the evaluation developed?" %}</strong></p>
