--- a/platform_code/home/templates/home/profile-orga-creation-modal.html
+++ b/platform_code/home/templates/home/profile-orga-creation-modal.html
@@ -3,7 +3,8 @@
 <div class="create-orga-modal">
     <form class="form" id="orga-creation-form" method='post' role="form">
         <div class="modal-header">
-            <h4 class="modal-title absolute-position" id="myModalLabel">{% trans "Create a new organisation" %}</h4>
+            <h4 class="modal-title larger-small-screen-absolute-position"
+                id="myModalLabel">{% trans "Create a new organisation" %}</h4>
             <button class="close" data-dismiss="modal" type="button">&times;</button>
         </div>
         <div class="modal-body create-form width-50">
@@ -17,10 +18,10 @@
             </div>
 
         </div>
-        <div class="modal-footer center" style="columns: 1">
+        <div class="modal-footer center one-column">
             <div class="column">
                 <div>
-                    <input class="btn btn-primary same-size-250 margin-auto" id="orga-creation" style="margin: auto"
+                    <input class="btn btn-primary same-size-250 margin-auto" id="orga-creation"
                            type="submit" value="{% trans 'Create the organisation' %}"/>
                 </div>
                 <div class="margin-10">
