--- a/platform_code/home/templates/home/profile-organisation-creation.html
+++ b/platform_code/home/templates/home/profile-organisation-creation.html
@@ -16,7 +16,7 @@
 
 <!--If message in context -->
 {% if message %}
-    <div class="alert {{message|get_key_by_position:0}} center">{{message|get_value_by_position:0}}</div>
+    <div class="alert {{message|get_key_by_position:0}} center margin-20">{{message|get_value_by_position:0}}</div>
 {% endif %}
 
 <div class="form-center width-35">
@@ -27,23 +27,25 @@
                 <span>{{ field.label_tag }}</span><br>
                     <p>{{ field }}</p>
                 {% if field.help_text %}
-                    <small style="color: grey">{{ field.help_text }}</small>
+                    <small class="grey-color">{{ field.help_text }}</small>
                 {% endif %}
                 {% for error in field.errors %}
-                    <p style="color: red">{{ error }}</p>
+                    <p class="red-color">{{ error }}</p>
                 {% endfor %}
             {% endfor %}
-            <button class="btn btn-primary same-size-220 margin-10" id="orga-creation" type="submit">{% trans "Create" %}
+            <button class="btn btn-primary button-190-or-220 margin-10" id="orga-creation" type="submit">{% trans "Create" %}
             </button>
         </form>
 
         {% if skip_button %}
             <form action="{% url 'home:user-profile' %}">
-                <input class="btn btn-danger same-size-220 margin-10" type="submit" value="{% trans 'Pass' %}"/>
+                <button class="btn btn-danger button-190-or-220 margin-10" type="submit">{% trans 'Pass' %}
+                </button>
             </form>
             {% else %}
             <form action="{% url 'home:user-profile' %}">
-                <input class="btn btn-danger same-size-220 margin-10" type="submit" value="{% trans 'Back' %}"/>
+                <button class="btn btn-danger button-190-or-220 margin-10" type="submit">{% trans 'Back' %}
+                </button>
             </form>
         {% endif %}
     </div>
