--- a/platform_code/home/templates/home/resources.html
+++ b/platform_code/home/templates/home/resources.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<h1> Ressources </h1>
+<h1 class="h1-margin-no-breadcrumbs"> Ressources </h1>
 
 <div>
     {% include "home/profile-my-ressources.html" %}
