--- a/platform_code/home/templates/home/settings-export-data.html
+++ b/platform_code/home/templates/home/settings-export-data.html
@@ -5,11 +5,15 @@
 <div>
     <h3 class="settings-subtitle">{% trans "Personnal data export" %}</h3>
 
-    <div class="margin-50">
+    <div class="margin-50 center-smartphone">
         <p>{% trans "Do you want to download your personnal data stored in the platform?" %}</p>
     </div>
+    <div class="center-smartphone">
     <form action="{% url 'home:export-user-data' %}">
-        <input class="btn btn-primary float-left validation-button" type="submit" value="{% trans 'Download' %}"/>
+        <input class="btn btn-primary float-left-larger-tablet"
+               type="submit"
+               value="{% trans 'Download' %}"/>
     </form>
+    </div>
 
 </div>
