--- a/platform_code/assessment/templates/assessment/creation-evaluation-modal.html
+++ b/platform_code/assessment/templates/assessment/creation-evaluation-modal.html
@@ -7,7 +7,7 @@
           method='post'
           role="form">
         <div class="modal-header">
-            <h4 class="modal-title absolute-position" id="myModalLabel">{% trans "Create a new evaluation" %}</h4>
+            <h4 class="modal-title larger-small-screen-absolute-position" id="myModalLabel">{% trans "Create a new evaluation" %}</h4>
             <button class="close" data-dismiss="modal" type="button">&times;</button>
         </div>
         <div class="modal-body create-form width-50">
@@ -24,7 +24,7 @@
                 </p>
             </div>
         </div>
-        <div class="modal-footer center" style="columns: 1;">
+        <div class="modal-footer center one-column">
             <div class="column">
                 <div>
                     <input class="btn btn-primary same-size-250 margin-auto" type="submit"
