--- a/platform_code/assessment/templates/assessment/deletion-evaluation.html
+++ b/platform_code/assessment/templates/assessment/deletion-evaluation.html
@@ -15,7 +15,7 @@
                 {% endblocktrans %}
             </p>
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer self-center">
             <input class="btn btn-primary same-size-220 margin-auto" type="submit"
                    value="{% trans 'Delete my evaluation' %}"/>
             <input class="btn btn-danger same-size-220 margin-auto" data-dismiss="modal" type="button"
