--- a/platform_code/assessment/templates/assessment/organisation/member/orga-members.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/orga-members.html
@@ -8,7 +8,7 @@
 <div id="messagesMember"></div>
 
 {% if organisation|get_role:user == "admin" %}
-<div class="margin-bot-top-20">
+<div class="margin-bot-top-20 small-screen-max-center">
     <button class="btn btn-primary" data-target="#modal-add-member"
             data-toggle="modal"
             title="{% trans 'Add a member to your organisation' %}"
@@ -19,7 +19,7 @@
 </div>
 {% endif %}
 
-<table class="table table-striped">
+<table class="table table-striped organisation-evaluation-cards">
     <thead>
     <tr>
         <th class="col-array" scope="col">{% trans "User name" %}</th>
@@ -42,27 +42,28 @@
             <td class="case-array">{{member|evaluation_created_by:evaluation_list}}</td>
             <!-- To allow the user to leave the organisation-->
             {% if member.user == user %}
-            <!-- Unique case where the user cannot leave the organisation, he is the only admin member-->
-            {% if organisation|get_role:user == "admin" and organisation.count_admin_members == 1 %}
-            {% else %}
-            <td class="div-hidden-icons">
-                <button class="btn btn-danger small-btn" data-target="#modal-leave-orga{{member.id}}"
-                        data-toggle="modal">
-                    <i class="fa fa-sign-in"></i>
-                </button>
-                <div aria-hidden="true" class="modal" id="modal-leave-orga{{member.id}}">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            {% include "assessment/organisation/member/leave-organisation.html" %}
+                <!-- Unique case where the user cannot leave the organisation, he is the only admin member-->
+                {% if organisation|get_role:user == "admin" and organisation.count_admin_members == 1 %}
+                {% else %}
+                <td class="div-hidden-icons">
+                    <button class="btn btn-danger small-btn" data-target="#modal-leave-orga{{member.id}}"
+                            data-toggle="modal">
+                        <i class="fa fa-sign-in"></i>
+                    </button>
+                    <div aria-hidden="true" class="modal" id="modal-leave-orga{{member.id}}">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                {% include "assessment/organisation/member/leave-organisation.html" %}
+                            </div>
                         </div>
                     </div>
-                </div>
                 {% endif %}
-                {% endif %}
-
-                {% if organisation|get_role:user == "admin" and not member.role == "admin" %}
+            {% endif %}
+<!--         If the user is admin member and the member displayed is not admin       -->
+            {% if organisation|get_role:user == "admin" and not member.role == "admin" %}
             <td class="div-hidden-icons" id="member{{member.id}}">
-                <button class="btn btn-primary small-btn margin-10" data-target="#modal-edit-role{{member.id}}"
+                <button class="btn btn-primary small-btn margin-10 small-screen-max-float-left"
+                        data-target="#modal-edit-role{{member.id}}"
                         data-toggle="modal">
                     <i class="fa fa-edit"></i>
                 </button>
@@ -74,7 +75,8 @@
                     </div>
                 </div>
 
-                <button class="btn btn-danger small-btn margin-10" data-target="#modal-remove-member{{member.id}}"
+                <button class="btn btn-danger small-btn margin-10 small-screen-max-right"
+                        data-target="#modal-remove-member{{member.id}}"
                         data-toggle="modal">
                     <span class="fa fa-trash"></span>
                 </button>
@@ -100,8 +102,10 @@
             <td class="case-array">{{pending_member.role}} (pending)</td>
             <td class="case-array"></td>
             {% if organisation|get_role:user == "admin" %}
-            <td class="div-hidden-icons background-white" id="pendingMember{{pending_member.id}}">
-                <button class="btn btn-primary small-btn" data-target="#modal-edit-role-pending{{pending_member.id}}"
+            <td class="div-hidden-icons background-white"
+                id="pendingMember{{pending_member.id}}">
+                <button class="btn btn-primary small-btn small-screen-max-float-left"
+                        data-target="#modal-edit-role-pending{{pending_member.id}}"
                         data-toggle="modal">
                     <i class="fa fa-edit"></i>
                 </button>
@@ -113,7 +117,7 @@
                     </div>
                 </div>
 
-                <button class="btn btn-danger small-btn margin-10"
+                <button class="btn btn-danger small-btn large-screen-min-margin-10 small-screen-max-right"
                         data-target="#modal-remove-member-pending{{pending_member.id}}"
                         data-toggle="modal">
                     <span class="fa fa-trash"></span>
