--- a/platform_code/assessment/templates/assessment/organisation/member/remove-pending-member.html
+++ b/platform_code/assessment/templates/assessment/organisation/member/remove-pending-member.html
@@ -13,14 +13,17 @@
 
     <div class="modal-footer self-center">
         <form action="{% url 'assessment:orga-summary' organisation.id %}"
-              id="remove_pending_member{{pending_member.id}}" method="post">
+              id="remove_pending_member{{pending_member.id}}"
+              method="post"
+              class="tablet-max-center">
             {% csrf_token %}
-            <button class="btn btn-primary same-size-250 margin-auto"
+            <button class="btn btn-primary adapted-button-size-250 margin-auto"
                     onclick="removeMember('remove_pending_member{{pending_member.id}}', '{{pending_member.id}}', true)"
-                    type="button">
+                    type="submit">
                 {% trans 'Yes' %}
             </button>
-            <button class="btn btn-danger same-size-250 margin-auto right-button" data-dismiss="modal"
+            <button class="btn btn-danger adapted-button-size-250 margin-auto right-button smartphone-margin-top"
+                    data-dismiss="modal"
                     type="button">{% trans 'Cancel' %}
             </button>
         </form>
