--- a/platform_code/assessment/templates/assessment/organisation/orga-evaluation.html
+++ b/platform_code/assessment/templates/assessment/organisation/orga-evaluation.html
@@ -6,7 +6,7 @@
 <h3 class="title-column">{% trans "Organisation's evaluations" %} </h3>
 
 
-<table class="table table-striped">
+<table class="table table-striped organisation-evaluation-cards">
     <thead>
     <tr>
         <th class="col-array" scope="col">{% trans "Evaluation's name" %}</th>
@@ -25,7 +25,7 @@
     <div>
         <tr class="row-array">
 
-            <td class="case-array">{{evaluation.name}}</td>
+            <td class="case-array first-case-array">{{evaluation.name}}</td>
             <td class="case-array">V{{evaluation.assessment.version}}</td>
             <td class="case-array">{{evaluation.created_at|format_date_calendar}}</td>
 
@@ -48,7 +48,7 @@
             {% else %}
             <td class="case-array">-</td>
             {% endif %}
-            <td class="case-array">
+            <td class="case-array last-case-array">
                 <!-- If the evaluation is upgradable, which means a new assessment version exists-->
                 {% if evaluation.is_upgradable %}
                 {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
@@ -105,7 +105,9 @@
 
             <td class="div-hidden-icons background-white" id="div-hidden-icons{{evaluation.id}}">
                 {% if organisation|get_role:user == "admin" or organisation|get_role:user == "editor" %}
-                <button class="btn btn-danger" data-target="#modal-delete{{evaluation.id}}" data-toggle="modal"><span
+                <button class="btn btn-danger small-screen-max-right"
+                        data-target="#modal-delete{{evaluation.id}}"
+                        data-toggle="modal"><span
                         class="fa fa-trash"></span></button>
                 <!-- The Modal delete evaluation -->
                 <!-- The modal is inside the for loop because we need to catch the evaluation id -->
