--- a/platform_code/assessment/templates/assessment/organisation/orga-settings.html
+++ b/platform_code/assessment/templates/assessment/organisation/orga-settings.html
@@ -4,9 +4,11 @@
 
 <h3 class="title-column">{% trans "Organisation's parameters" %}</h3>
 
-<p>{% trans "Name:" %} {{organisation.name}}</p>
-<p>{% trans "Activity:" %} {{organisation.sector}}</p>
-<p>{% trans "Size:"%} {{organisation.size}}</p>
-<p>{% trans "Number of member(s):" %} {{organisation.count_displayed_members}}</p>
-<p>{% trans "Number of in progress evaluation(s):" %} {{organisation.get_list_evaluations|count_in_progress}}</p>
-<p>{% trans "Number of finished evaluation(s):" %} {{organisation.get_list_evaluations|count_finished}}</p>
+<div class="organisation-evaluation-cards organisation-settings">
+    <p>{% trans "Name:" %} {{organisation.name}}</p>
+    <p>{% trans "Activity:" %} {{organisation.sector}}</p>
+    <p>{% trans "Size:"%} {{organisation.size}}</p>
+    <p>{% trans "Number of member(s):" %} {{organisation.count_displayed_members}}</p>
+    <p>{% trans "Number of in progress evaluation(s):" %} {{organisation.get_list_evaluations|count_in_progress}}</p>
+    <p>{% trans "Number of finished evaluation(s):" %} {{organisation.get_list_evaluations|count_finished}}</p>
+</div>
