--- a/platform_code/assessment/templates/assessment/pagination.html
+++ b/platform_code/assessment/templates/assessment/pagination.html
@@ -12,13 +12,13 @@
             <a href="{{ evaluation.get_absolute_url }}">{% trans "Evaluation summary" %}</a>
 
         {% endif %}
+        <br class="remove-larger-than-smartphone">
         {% if page_obj.has_next %}
-            <span class="current"> - {% trans "Section" %} {{ page_obj.number }} -
+        <span class="current"> - {% trans "Section" %} {{ page_obj.number }} -</span>
         {% else %}
-            <span class="current"> - {% trans "Section" %} {{ page_obj.number }}
+        <span class="current"> - {% trans "Section" %} {{ page_obj.number }}</span>
         {% endif %}
-        </span>
-
+        <br class="remove-larger-than-smartphone">
         {% if page_obj.has_next %}
             <a href="{{ next_section.get_absolute_url }}">{% trans "Next section" %}</a>
 
