--- a/platform_code/home/templates/home/creation-evaluation-mutli-orga-modal.html
+++ b/platform_code/home/templates/home/creation-evaluation-mutli-orga-modal.html
@@ -3,7 +3,7 @@
 <div class="create-modal">
     <form class="form" id="create_evaluation_form" method='post' role="form">
         <div class="modal-header">
-            <h4 class="modal-title absolute-position" id="myModalLabel">{% trans 'Create a new evaluation' %}</h4>
+            <h4 class="modal-title larger-small-screen-absolute-position" id="myModalLabel">{% trans 'Create a new evaluation' %}</h4>
             <button class="close" data-dismiss="modal" type="button">&times;</button>
         </div>
         <div class="modal-body create-form width-50 ">
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <div class="modal-footer center" style="columns: 1;">
+        <div class="modal-footer center one-column">
             <div class="column">
                 <div>
                     <input class="btn btn-primary same-size-250 margin-auto" type="submit"
