--- a/platform_code/home/templates/home/legal-notices.html
+++ b/platform_code/home/templates/home/legal-notices.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="container">
-    <h1>Informations légales</h1>
+    <h1 class="h1-margin-no-breadcrumbs">Informations légales</h1>
     <h3 class="about-subtitle">1. Présentation du site.</h3>
     <p>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est
         précisé aux utilisateurs du site <a href="http://www.assessment.substra.ai/">www.assessment.substra.ai</a>
