--- a/platform_code/home/templates/home/profile-settings.html
+++ b/platform_code/home/templates/home/profile-settings.html
@@ -13,11 +13,12 @@
     <a class="active-breadcrumb" href="#" id="active-profile-settings"><span>{% trans "My information" %}</span></a>
 </div>
 
-<h1>{% trans "My account" %}</h1>
+<h1 class="h1-margin-breadcrumbs">{% trans "My account" %}</h1>
 <div class="container">
     <div class="row ">
-        <div class="col-md-3">
-            <ul class="nav nav-pills nav-stacked flex-column table-column-profile" role="tablist">
+        <div class="col-md-3 column-right profile-settings-pills">
+            <ul class="nav nav-pills nav-stacked flex-column table-column-profile"
+                role="tablist">
                 <li class="nav-item column-button">
                     <a class="nav-link profile-column active" data-toggle="pill" href="#content-username"
                        name="column-button"
@@ -53,7 +54,7 @@
                 <div class="container tab-pane active" id="content-username"><br>
                     {% include "home/settings-data.html" %}
                 </div>
-                <div class="container tab-pane fade" id="content-password">
+                <div class="container tab-pane fade" id="content-password"><br>
                     {% include "home/settings-password.html" %}
                 </div>
                 <div class="container tab-pane fade" id="content-export"><br>
@@ -67,8 +68,9 @@
     </div>
 </div>
 
-<form action="{% url 'home:user-profile' %}">
-    <input class="btn btn-primary bottom-page-button float-right same-size-280 " type="submit"
+<form action="{% url 'home:user-profile' %}"
+      class="center-smartphone">
+    <input class="btn btn-primary bottom-page-button float-right-larger-tablet same-size-280 " type="submit"
            value="{% trans 'Go back to my dashboard' %}"/>
 </form>
 
