--- a/platform_code/home/templates/home/settings-data.html
+++ b/platform_code/home/templates/home/settings-data.html
@@ -8,16 +8,18 @@
     <div class="alert {{message|get_key_by_position:0}}">{{message|get_value_by_position:0}}</div>
     {% endif %}
     <div class="body form-center">
-        <div class="column">
+        <div class="column-larger-tablet">
             <form action="#" id="form-user-data" method='post'>
                 {% csrf_token %}
                 {% for field in user_data_form %}
-                <span class="float-left"
-                >{% blocktrans with tag=field.label_tag %}{{tag}}{% endblocktrans %}</span>
+                <span class="float-left-larger-tablet">
+                    {% blocktrans with tag=field.label_tag %}{{tag}}{% endblocktrans %}
+                </span>
                 <p>{{ field }}</p>
                 {% endfor %}
-                <button class="btn btn-primary float-left " onclick="submitUserSettingsDataForm('form-user-data')"
-                        type="button">{% trans "Modify" %}
+                <button class="btn btn-primary float-left-larger-tablet"
+                        onclick="submitUserSettingsDataForm('form-user-data')"
+                        type="submit">{% trans "Modify" %}
                 </button>
             </form>
         </div>
