--- a/platform_code/home/templates/home/settings-delete.html
+++ b/platform_code/home/templates/home/settings-delete.html
@@ -6,12 +6,16 @@
 
 <h3 class="settings-subtitle">{% trans "Are you sure you want to delete your account?" %}</h3>
 
-<p>{% trans "The organisations you are the only admin member will be deleted, as well as their evaluations." %}</p>
+<p class="center-smartphone"
+    >{% trans "The organisations you are the only admin member will be deleted, as well as their evaluations." %}</p>
 
-<div class="">
-    <a class="btn btn-primary same-size-220 float-left" href="{% url 'home:user-profile-settings' %}"
+<div class="center-smartphone">
+    <a class="btn btn-primary adapted-width-button float-left-larger-tablet"
+       href="{% url 'home:user-profile-settings' %}"
     >{% trans "Cancel"%}</a>
-    <button class="btn btn-danger same-size-220 float-right" data-target="#modal-delete-account" data-toggle="modal"
+    <button class="btn btn-danger adapted-width-button float-right-larger-tablet smartphone-margin-top"
+            data-target="#modal-delete-account"
+            data-toggle="modal"
     >{% trans "Delete" %}
     </button>
 </div>
@@ -32,13 +36,15 @@
                 </p>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-primary same-size-250 margin-auto" data-dismiss="modal" type="button">
+                <button class="btn btn-primary same-size-250 margin-auto smartphone-60-height"
+                        data-dismiss="modal"
+                        type="button">
                     {% trans "Cancel" %}
                 </button>
-                <a class="btn btn-danger same-size-250 margin-auto" href="{% url 'home:delete-user' %}">
+                <a class="btn btn-danger same-size-250 margin-auto smartphone-60-height"
+                   href="{% url 'home:delete-user' %}">
                     {% trans "Delete my account" %}</a>
             </div>
-
         </div>
     </div>
 </div>
