--- a/platform_code/home/templates/home/signup.html
+++ b/platform_code/home/templates/home/signup.html
@@ -3,43 +3,51 @@
 {% load static %}
 
 {% block content %}
-<h1 class="margin-left-signup">{% trans "Sign up" %}</h1>
+<h1 class="margin-left-signup h1-margin-no-breadcrumbs">{% trans "Sign up" %}</h1>
 <div class="grid-container-2-cols-signup">
-    <img alt="image" class="img-fluid d-block mx-auto margin-110" src="{% static 'image/sign_up.png' %}"
-         style="max-height: 350px;">
-    <div class="float-right" style="padding-left: 15%;">
+    <div class="remove-smartphone-screen">
+        <img alt="image" class="img-fluid d-block mx-auto margin-110 image-max-350"
+             src="{% static 'image/sign_up.png' %}">
+    </div>
+    <div class="center-smartphone-screen tablet-min-screen-signup">
         <form id="signup" method="post">
             {% csrf_token %}
             {% for field in form %}
-            <div class="margin-10">
-                {{ field.label_tag }}
-            </div>
-            <div class="row margin-10 grid-2-cols-tooltip">
-                <div class=" form-input">
-                    <p>{{ field }}</p>
+                <div class="tablet-min-screen-field-margin-10 small-screen-field-signup">
+                    {{ field.label_tag }}
                 </div>
-                {% if forloop.counter == 4 %}
-                <div class="help-tip help-tip-right">
-                    <p>{% blocktrans %}
-                        Your password must contain at least 8 characters, with at least one number and one letter
-                        {% endblocktrans %}
-                    </p>
-                </div>
-                {% endif %}
-            </div>
-            {% for error in field.errors %}
-            <p style="color: red">{{ error }}</p>
-            {% endfor %}
+                <div class="signup-field-tablet-min-screen">
+                    <div class=" form-input">
+                        <p>{{ field }}</p>
+                    </div>
+                    {% if forloop.counter == 4 %}
+                    <div class="help-tip help-tip-right remove-smartphone-screen">
+                        <p>{% blocktrans %}
+                            Your password must contain at least 8 characters, with at least one number and one letter
+                            {% endblocktrans %}
+                        </p>
+                    </div>
+                    {% endif %}
 
+                </div>
+                <div class="margin-10">
+                    {% for error in field.errors %}
+                    <p class="red-color">{{ error }}</p>
+                    {% endfor %}
+                </div>
             {% endfor %}
-            <!--Todo to center: use media and margin-left-->
-            <div class="margin-left-signup">
-                <button class="btn btn-primary margin-bot-top-20" type="submit">{% trans "Sign up" %}</button>
-            </div>
+            <div class="tablet-min-screen-buttons-signup">
+                <div class="center">
+                    <button class="btn btn-primary margin-bot-top-20"
+                            type="submit">{% trans "Sign up" %}
+                    </button>
+                </div>
+                <div class="center">
+                    <a class="margin-10" href="{% url 'home:login' %}">{% trans "already have an account?" %}</a>
+                </div>
+                </div>
         </form>
-        <div style="margin-left: 7%;">
-            <a class="margin-10" href="{% url 'home:login' %}">{% trans "already have an account?" %} </a>
-        </div>
+
     </div>
 </div>
 
